fix: update muted color on dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -53,13 +53,13 @@
 		--color-background: hsl(0, 0%, 4%);
 		--color-foreground: hsl(0, 0%, 100%);
 
-		--color-secondary: hsl(0, 0%, 9%);
+		--color-secondary: hsl(0, 0%, 15%);
 		--color-secondary-foreground: hsl(0, 0%, 100%);
 
-		--color-muted: hsl(0, 0%, 9%);
-		--color-muted-foreground: hsl(0, 0%, 64%);
+		--color-muted: hsl(0, 0%, 15%);
+		--color-muted-foreground: hsl(0, 0%, 83%);
 
-		--color-accent: hsl(0, 0%, 15%);
+		--color-accent: hsl(0, 0%, 25%);
 		--color-accent-foreground: hsl(0, 0%, 100%);
 
 		--color-border: hsl(0, 0%, 64%);
